[gd_scene load_steps=11 format=3 uid="uid://cpgdv8fm2wncs"]

[ext_resource type="Script" path="res://scripts/offering.gd" id="1_qdj06"]
[ext_resource type="Texture2D" uid="uid://c0pu4r2q8futm" path="res://assets/images/candle-Sheet.png" id="2_2vbi8"]
[ext_resource type="Texture2D" uid="uid://5ch1f26qdv8h" path="res://assets/images/skull.png" id="3_2m5sj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q7qd4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5fu34"]
atlas = ExtResource("2_2vbi8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_188y1"]
atlas = ExtResource("2_2vbi8")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1bln"]
atlas = ExtResource("2_2vbi8")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wmr4"]
atlas = ExtResource("3_2m5sj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6o3jd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fu34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_188y1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1bln")
}],
"loop": true,
"name": &"candle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wmr4")
}],
"loop": true,
"name": &"skull",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_jvqef"]
font_size = 30
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="Offering" type="Node2D" groups=["droppable"]]
script = ExtResource("1_qdj06")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_q7qd4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_6o3jd")
animation = &"skull"

[node name="ValueLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "#"
label_settings = SubResource("LabelSettings_jvqef")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
